# flight-price-prediciton

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebooks/: notebook.ipynb
src/: __init__.py
src/predict/: __init__.py  model_loader.py  predict.py  preprocessing.py  schemas.py
src/train/: __init__.py  constants.py  preprocessing.py  train.py
