[project]
name = "flight-price-prediction"
version = "1.0.0"
description = "Flight price prediction ML system with FastAPI deployment"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "catboost>=1.2",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "joblib>=1.3",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.0",
    "pytest>=8.0",
    "httpx>=0.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
